# MapMarkerFramework

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  cmake.yml
cmake/: Version.h.in  headerlist.cmake  sourcelist.cmake
include/: ActionGenerator.h  DiscoveryMusicManager.h  GFxUtil.h  ImportData.h  ImportManager.h  LocalMapManager.h  MapConfigLoader.h  MapMarkerUtil.h  PCH.h  Patches.h  Pattern.h  SWFOutputStream.h  SpecialMarkerData.h  TagFactory.h
include/MMF/: Interfaces.h  Interfaces.inl  Stubs.h
include/RE/: Ext.h  OffsetsExt.h
include/RE/G/: GASDoAction.h  GFxPlaceObjectBase.h
src/: ActionGenerator.cpp  ActionGenerator.h  DiscoveryMusicManager.cpp  DiscoveryMusicManager.h  FormUtil.cpp  FormUtil.h  GFxUtil.cpp  Hooks.cpp  ImportData.cpp  ImportData.h  ImportManager.cpp  ImportManager.h  LocalMapManager.cpp  MapConfigLoader.cpp  MapConfigLoader.h  MapMarkerManager.cpp  MapMarkerManager.h  MapMarkerUtil.cpp  MapMarkerUtil.h  Patches.cpp  SWFOutputStream.cpp  SWFOutputStream.h  Settings.cpp  Settings.h  TagFactory.cpp  main.cpp
src/MMF/: MapMarkerInterface.cpp  MapMarkerInterface.h
src/PCH/: PCH.h
src/RE/: .clang-format  Ext.h  Offset.Ext.h  SpecialMarkerData.h
src/RE/G/: GFxMovieDefImpl.h  GFxResourceReport.h  GFxSpriteDef.h
src/REL/: Pattern.h
src/SWF/: ActionGenerator.cpp  ActionGenerator.h  SWFOutputStream.cpp  SWFOutputStream.h  TagFactory.cpp  TagFactory.h
src/Util/: FormUtil.cpp  FormUtil.h  GFxUtil.cpp  GFxUtil.h  MapMarkerUtil.cpp  MapMarkerUtil.h
src/main/: DiscoveryMusicManager.cpp  DiscoveryMusicManager.h  ImportData.cpp  ImportData.h  ImportManager.cpp  ImportManager.h  LocalMapManager.cpp  LocalMapManager.h  MapConfigLoader.cpp  MapConfigLoader.h  Patch.cpp  Patch.h  SKSEPlugin.cpp  Settings.cpp  VendorManager.cpp  VendorManager.h
